--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -21,7 +21,12 @@
       To: <input id="compose-recipients" class="form-control" />
     </div>
     <div class="form-group">
-      <input class="form-control" id="compose-subject" placeholder="Subject" />
+      <input
+        autofocus
+        class="form-control"
+        id="compose-subject"
+        placeholder="Subject"
+      />
     </div>
     <textarea
       class="form-control"
@@ -38,7 +43,11 @@
     <p id="single-email-timestamp"></p>
   </div>
   <p id="single-email-recipients"></p>
-  <button type+"submit" class="btn mt-2 mb-2 btn-dark">Reply</button>
+  <form id="reply-form">
+    <button type="submit" class="btn mt-2 mb-2 btn-dark" id="reply">
+      Reply
+    </button>
+  </form>
   <p id="single-email-body" class="mb-4"></p>
 </div>
 {% endblock %} {% block script %}
