--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -44,7 +44,7 @@
   </div>
   <p id="single-email-recipients"></p>
   <form id="reply-form">
-    <button type="submit" class="btn mt-2 mb-2 btn-dark" id="reply">
+    <button type="button" class="btn mt-2 mb-2 btn-dark" id="reply">
       Reply
     </button>
   </form>
