--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -1,10 +1,26 @@
 {% extends "mail/layout.html" %} {% load static %} {% block body %}
 <h2>{{ request.user.email }}</h2>
 
-<button class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
-<button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
-<button class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
-<button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
+<button class="btn btn-sm btn-outline-primary" data-section="inbox" id="inbox">
+  Inbox
+</button>
+<button
+  class="btn btn-sm btn-outline-primary"
+  data-section="compose"
+  id="compose"
+>
+  Compose
+</button>
+<button class="btn btn-sm btn-outline-primary" data-section="sent" id="sent">
+  Sent
+</button>
+<button
+  class="btn btn-sm btn-outline-primary"
+  data-section="archive"
+  id="archived"
+>
+  Archived
+</button>
 <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
 <hr />
 
